--- a/back-to-top-button/style.css
+++ b/back-to-top-button/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-color: #4941eb;
+    background-color: #00A4EF;
     padding: 5em 20em;
 }
 
@@ -41,7 +41,7 @@ h2 {
 }
 
 p {
-	color: #bbc8d8;
+	color: #fff;
 	font-family: 'Lato';
 	font-size: 22px;
 	font-weight: 500;
